# ag

./: LICENSE  README.md  pyproject.toml
src/ag/: config.py
src/ag/core/: agent.py  client.py
src/ag/core/handlers/: input_handler.py  stream_handler.py
src/ag/scripts/: cli.py
src/ag/utils/: arguments_parser.py  conversation.py  replace_flags.py
test/: test_config.py
