[build-system]
requires = ["uv_build>=0.7.21,<0.8.0"]
build-backend = "uv_build"

[project]
name = "ag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "openai>=1.95.1",
    "prompt-toolkit>=3.0.51",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "tabulate>=0.9.0",
    "toml>=0.10.2",
]

[project.scripts]
ag = "ag.scripts.cli:main"
